--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+        <title>제주도 여행코스 </title>
+ </head>
+
+    <body>
+
+        <div>
+            <h1>[여행코스 워드  클라우드]</h1>
+        </div>
+
+        <div>
+            <!-- <p>published: 14.06.2014, 12:14</p>  -->
+            <h2><a href="">커풀 데이트 코스</a></h2>
+            <p>이호테우해변 -> 봄날카페 -> 올레길 -> 리치망고 -> 더럭분교</p>
+            <p> -> 해변 드라이브(커풀 호감도 상승) -> 협재해수욕장(커풀 수영시 남녀 호감도 상승) </p>
+
+            <!--
+            <img src="{{STATIC_URL}}img/Couple_Course.PNG"/>
+             -->
+
+            <img src="{% static 'Couple_Course.PNG' %}">
+
+        </div>
+        <br>
+        <div>
+            <h2><a href="">솔로 데이트 코스</a></h2>
+            <p>이호테우해변 -> 봄날카페 -> 올레길(남녀 썸발생) -> 리치망고 -> 더럭분교 </p>
+            <p> ->해변 드라이브(남녀 썸발생) -> 협재해수욕장(스킨스쿠버 체험시 남녀 썸발생) </p>
+             <p><img src="D:\\djangogirls\\blog\\templates\\img\\Solo_Course.PNG"></p>
+        </div>
+    </body>
 </html>
