--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
+ {% extends 'blog/base.html' %}
 {%load staticfiles %}
+
 <html lang="en">
+
 <head>
-        <title>제주도 여행코스 </title>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
  </head>
 
     <body>
 
+
+       {% block content %}
             {% for post in posts %}
-                <div>
-                    <h1><a href="">{{post.title}}</a></h1>
+                <div class="post">
+                    <div class ="date">
+                          <p>published: {{post.published_date}}</p>
+                    </div>
+                    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
                     <p>{{post.text|linebreaksbr}}</p>
-                       <p>published: {{post.published_date}}</p>
+
                 </div>
             {% endfor %}
 
-
-
-        <div>
-            <h1>[여행코스 워드  클라우드]</h1>
+             <div>
+             <h1>[제주도 여행코스 ]</h1>
         </div>
 
         <div>
-            <!-- <p>published: 14.06.2014, 12:14</p>  -->
+           <!-- <p>published: 14.06.2014, 12:14</p>  -->
             <h2><a href="">커풀 데이트 코스</a></h2>
             <p>이호테우해변 -> 봄날카페 -> 올레길 -> 리치망고 -> 더럭분교</p>
             <p> -> 해변 드라이브(커풀 호감도 상승) -> 협재해수욕장(커풀 수영시 남녀 호감도 상승) </p>
@@ -35,8 +44,6 @@
 
              <img src="{% static 'blog/Couple_Course.png' %}" >
 
-
-
              <!--
             <img src="/static/Couple_Course.png" >
            -->
@@ -47,7 +54,17 @@
             <h2><a href="">솔로 데이트 코스</a></h2>
             <p>이호테우해변 -> 봄날카페 -> 올레길(남녀 썸발생) -> 리치망고 -> 더럭분교 </p>
             <p> ->해변 드라이브(남녀 썸발생) -> 협재해수욕장(스킨스쿠버 체험시 남녀 썸발생) </p>
-             <p><img src="{% static 'blog/test.jpg' %}"  width="400"></p>
+
+
         </div>
+       <div>
+            <h1>[여행코스 워드  클라우드]</h1>
+            <p><img src="{% static 'blog/test.jpg' %}"  width="400"></p>
+       </div>
+
+       {% endblock%}
+
+
+
     </body>
 </html>
