changed the html

--- a/blog/templates/blog(Test_blog)/post_list.html
+++ b/blog/templates/blog(Test_blog)/post_list.html
@@ -7,7 +7,6 @@
 <head>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
  </head>
@@ -38,7 +37,7 @@
             <p> -> 해변 드라이브(커풀 호감도 상승) -> 협재해수욕장(커풀 수영시 남녀 호감도 상승) </p>
 
             <!--
-            <img src="{{STATIC_URL}}img/Couple_Course.PNG"/>
+            <img src="{{STATIC_URL}}static/img/Couple_Course.PNG"/>
              -->
 
 
